--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -4,16 +4,21 @@
 name: Node.js Package
 on:
   push:
-    jobs:
-    build:
-      runs-on: ubuntu-latest
-      steps:
-        - uses: actions/checkout@v3
-        - uses: actions/setup-node@v3
-          with:
-            node-version: 16
-        - run: npm ci
-        - run: npm test
-        - run: npm install
-        - run: npm start
+    branches: [ main ]
+  pull_request:
+    branches: [ main ]
+  release:
+    types: [created]
 
+jobs:
+build:
+  runs-on: ubuntu-latest
+  steps:
+    - uses: actions/checkout@v3
+    - uses: actions/setup-node@v3
+      with:
+        node-version: 16
+    - run: npm ci
+    - run: npm test
+    - run: npm install
+    - run: npm start
