--- a/.github/workflows/npm-publish.yml
+++ b/.github/workflows/npm-publish.yml
@@ -11,19 +11,13 @@ on:
     types: [created]
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [14.x, 15.x, 16.x]
-    steps:
-      - uses: actions/checkout@v2
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v2
-        with:
-          node-version: ${{ matrix.node-version }}
-          registry-url: 'https://npm.pkg.github.com'
-      - run: npm ci
-      - run: npm run build --if-present
-      - run: npm test
-      - run: npm start
+    build:
+        steps:
+          - uses: actions/checkout@v2
+          - uses: actions/setup-node@v2
+             with:
+              node-version: '12'
+              check-latest: true
+          - run: npm install
+          - run: npm check-rules
+          - run: npm start
