--- a/package.json
+++ b/package.json
@@ -1,25 +1,19 @@
 {
-  "name": "esp32-websocket-client-and-node",
+  "name": "json_another_version",
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
+  "directories": {
+    "lib": "lib",
+    "test": "test"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js"
   },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/alcarazolabs/ESP32-websocket-client-and-node.js.git"
-  },
-  "keywords": [],
-  "author": "",
+  "author": "robel",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/alcarazolabs/ESP32-websocket-client-and-node.js/issues"
-  },
-  "homepage": "https://github.com/alcarazolabs/ESP32-websocket-client-and-node.js#readme",
   "dependencies": {
-    "readme-md-generator": "^1.0.0",
     "websocket": "^1.0.34"
   }
 }
