--- a/platformio.ini
+++ b/platformio.ini
@@ -12,5 +12,6 @@
 platform = espressif32
 board = esp32doit-devkit-v1
 framework = arduino
-lib_deps = bblanchon/ArduinoJson@^6.20.0
-https://github.com/morrissinger/ESP8266-Websocket.git
+lib_deps = 
+	bblanchon/ArduinoJson@^6.20.1
+	links2004/WebSockets@^2.3.7
